Fixed poosibility of text overflow by upgrading to Bootstrap3RC2

--- a/menuwatch/assets/css/menuwatch.css
+++ b/menuwatch/assets/css/menuwatch.css
@@ -283,10 +283,16 @@ svg text {
     display:block;
     padding:25px;
     margin:50px 0;
+    overflow:hidden;
 
     background-repeat:no-repeat !important;
     background-position:center !important;
     background-size:contain !important;
+}
+
+.subhero h4 {
+    max-width:350px;
+    margin:0 auto;
 }
 
 .subhero-wrapper:after {
